# SciLEx

./: .env.example  .gitignore  .readthedocs.yaml  ASYNC_COLLECTORS_FIX.md  CHANGELOG.md  CLAUDE.md  COMPARISON_WIMMICS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  GUI_IMPLEMENTATION_REFERENCE.md  IMPROVEMENTS.md  INSTALL.md  README.md  REFACTORING_PHASE1_COMPLETE.md  REFACTORING_PROGRESS.md  TRACER_ANALYSIS.md  Tuto_firstContact.md  collection_log.txt  pyproject.toml  requirements.txt  scilex.config.test.yml  search_strategy.md  test_quality_improvements.py
.deprecated/: INVENTORY.md
.deprecated/collectors/: google_scholar.py
.deprecated/scripts/: optimize_keywords.py
.github/workflows/: draft-pdf.yml  tests.yml
.serena/: project.yml
.serena/memories/: Refactoring_Phase1_Completed.md  (+1 more)
docs/: cleanup-summary.md  conf.py  index.md  migration-guide.md  requirements.txt
paper/: paper.bib  paper.md
scilex/: __init__.py  __main__.py  abstract_validation.py  aggregate_collect.py  analyze.py  api.config.yml.example  config.py  config_defaults.py  constants.py  duplicate_tracking.py  enrich_with_hf.py  export_to_bibtex.py  keyword_validation.py  logging_config.py  pipeline_utils.py  push_to_zotero.py  quality_validation.py  run_collection.py  scilex.advanced.yml.example  scilex.config.yml.example  snowball_sampling.py  suggest_keywords.py  summarize_clusters.py
src/: abstract_validation.py  aggregate_collect.py  api.config.yml.example  config_defaults.py  constants.py  duplicate_tracking.py  enrich_with_hf.py  export_to_bibtex.py  fuzzy_matching.py  getHF_collect.py  keyword_validation.py  logging_config.py  optimize_keywords.py  push_to_Zotero_collect.py  push_to_zotero.py  quality_validation.py  run_collecte.py  run_collection.py  scilex.advanced.yml.example  scilex.config.test_pmc.yml  scilex.config.yml.backup  scilex.config.yml.example
tests/: README.md  conftest.py  test_abstract_validation.py  test_aggregate_collect.py  test_aggregate_functions.py  test_aggregate_parallel.py  test_aggregate_parallel_batch.py  test_async_max_articles.py  test_base_collector.py  test_bibtex_export.py  test_biorxiv_aggregation.py  test_biorxiv_collector.py  test_circuit_breaker.py  test_citations_tools.py  test_collector_collection.py  test_collector_collection_extra.py  test_config.py  test_config_defaults.py  test_constants.py  test_crossref_citations.py  test_crossref_coverage.py  test_dual_keyword_logic.py  test_duplicate_tracking.py  test_duplicate_tracking_analysis.py  test_format_converters.py  test_hf_csv_enrichment.py  test_import.py  test_keyword_suggestions.py  test_keyword_validation.py  test_keyword_validation_report.py  test_openaire_aggregation.py  test_openaire_collector.py  test_openalex.py  test_orkg_aggregation.py  test_orkg_collector.py  test_pagination_bug.py  test_path_normalization.py  test_post_filter.py  test_pubmed_aggregation.py  test_pubmed_central_format.py  (+10 more)
(+169 files in other folders)
