[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scilex"
version = "0.1.0"
description = "Python Toolbox for Science Literature Exploration and Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Celian Ringwald"},
]
keywords = [
    "scientific literature",
    "systematic review",
    "literature analysis",
    "citation network",
    "research tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "lxml>=4.9.0",
    "ratelimit>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "bibtexparser>=1.4.0",
    "httpx>=0.24.0",
    "rdflib>=7.0.0",
    "sparqlwrapper>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "orcid>=1.0.0",
    "scholarly>=1.7.0",
    "selenium>=4.10.0",
    "fake-useragent>=1.1.0",
    "simplejson>=3.19.0",
    "textdistance>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/Wimmics/SciLEx"
Repository = "https://github.com/Wimmics/SciLEx"
Issues = "https://github.com/Wimmics/SciLEx/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
fix = true
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # # pydocstyle
    # "D"
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "SIM103",  # Return negated condition directly (style preference)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
